--- a/39. Combination Sum.ipynb
+++ b/39. Combination Sum.ipynb
@@ -8,170 +8,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O\\left(2^{\\tfrac{t}{m}}\\right)$**  \n",
+    "**空間複雜度: $O\\left(\\tfrac{t}{m}\\right)$**\n",
+    "\n",
+    "* $t$：目標值 target\n",
+    "* $m$：candidates 裡的最小值\n",
+    "\n",
+    "時間複雜度:\n",
+    "1. 每個候選值都可選或可不選，複雜度是 $O(2)$\n",
+    "2. 組成 target 最多需要 $\\tfrac{target}{min(candidates)}$組，複雜度是 $O\\left(\\tfrac{t}{m}\\right)$，也就是遞迴深度\n",
+    "3. 遞迴的複雜度是 $O\\left(2^{\\tfrac{t}{m}}\\right)$\n",
+    "4. 前面的 sort 複雜度是 $O(n \\log n)$\n",
+    "5. 總複雜度是 $O\\left(n \\log n + 2^{\\tfrac{t}{m}}\\right)$ ≈ $O\\left(2^{\\tfrac{t}{m}}\\right)$\n",
+    "\n",
+    "空間複雜度:  \n",
+    "即遞迴深度，複雜度是 $O\\left(\\tfrac{t}{m}\\right)$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "candidates = [2,3,6,7]; target = 7\n",
+    "from typing import List\n",
     "\n",
-    "candidates = [2,3,5]; target = 8"
+    "class Solution:\n",
+    "    def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:\n",
+    "        result = []\n",
+    "        candidates.sort()\n",
+    "\n",
+    "        print(f'{candidates = }\\n')\n",
+    "\n",
+    "        def dfs(index, current_list, previous_total):\n",
+    "            if previous_total == target:\n",
+    "                result.append(current_list.copy())\n",
+    "                print(f'({previous_total = }) == ({target = })')\n",
+    "                print(f'{result = }')\n",
+    "                return\n",
+    "            \n",
+    "            for j in range(index, len(candidates)):\n",
+    "                current_total = previous_total + candidates[j]\n",
+    "\n",
+    "                print(f'{index = }, {j = }, {current_list = }, {previous_total = }, {current_total = }')\n",
+    "                if current_total > target:\n",
+    "                    print(f'({current_total = }) > ({target = })')\n",
+    "                    return\n",
+    "                \n",
+    "                current_list.append(candidates[j])\n",
+    "                print(f'{current_list = }')\n",
+    "                \n",
+    "                dfs(index=j, current_list = current_list, previous_total=current_total)\n",
+    "\n",
+    "                current_list.pop()\n",
+    "                print(f'pop -> {index = }, {j = }, {current_list = }, {previous_total = }\\n')\n",
+    "\n",
+    "\n",
+    "        dfs(index=0, current_list=[], previous_total=0)\n",
+    "\n",
+    "        return result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    def combinationSum(self, candidates, target):\n",
-    "        # 將候選數組按升序排列\n",
-    "        self.candidates = sorted(candidates)\n",
-    "        print(f\"candidates = {self.candidates}\")\n",
-    "        self.res = []\n",
-    "\n",
-    "        # 開始深度優先搜尋\n",
-    "        self.dfs(index = 0, target = target, path = [])\n",
-    "\n",
-    "        return self.res\n",
-    "    \n",
-    "    def dfs(self, index, target, path):\n",
-    "        print(\"-\" * 150)\n",
-    "        print(f\"index = {index}, target = {target}, path = {path}\")\n",
-    "\n",
-    "        # 如果目標值為零，表示找到一組組合，加入結果中\n",
-    "        if target == 0:\n",
-    "            self.res.append(path)\n",
-    "            print(f\"-> res = {self.res}\")\n",
-    "            return\n",
-    "        \n",
-    "        # 如果目標值為負數，表示組合不成立，返回上一層\n",
-    "        if target < 0:            \n",
-    "            print(\"-> target < 0\")\n",
-    "            return\n",
-    "        \n",
-    "        # 遍歷候選數組的子集合\n",
-    "        for i, num in enumerate(self.candidates[index:]):            \n",
-    "            print(f\"candidates = {self.candidates[index:]}\")\n",
-    "            print(f\"target = {target}, i = {i}, num = {num}-> dfs\")\n",
-    "\n",
-    "            # 遞歸調用，更新索引、目標值，以及當前組合\n",
-    "            self.dfs(index = (index + i), target = (target - num), path = (path + [num]))\n",
-    "            \n",
-    "            if (target - num <= 0):\n",
-    "                break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "candidates = [2, 3, 5]\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 0, target = 8, path = []\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 8, i = 0, num = 2-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 0, target = 6, path = [2]\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 6, i = 0, num = 2-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 0, target = 4, path = [2, 2]\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 4, i = 0, num = 2-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 0, target = 2, path = [2, 2, 2]\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 2, i = 0, num = 2-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 0, target = 0, path = [2, 2, 2, 2]\n",
-      "-> res = [[2, 2, 2, 2]]\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 4, i = 1, num = 3-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 1, target = 1, path = [2, 2, 3]\n",
-      "candidates = [3, 5]\n",
-      "target = 1, i = 0, num = 3-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 1, target = -2, path = [2, 2, 3, 3]\n",
-      "-> target < 0\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 4, i = 2, num = 5-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 2, target = -1, path = [2, 2, 5]\n",
-      "-> target < 0\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 6, i = 1, num = 3-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 1, target = 3, path = [2, 3]\n",
-      "candidates = [3, 5]\n",
-      "target = 3, i = 0, num = 3-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 1, target = 0, path = [2, 3, 3]\n",
-      "-> res = [[2, 2, 2, 2], [2, 3, 3]]\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 6, i = 2, num = 5-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 2, target = 1, path = [2, 5]\n",
-      "candidates = [5]\n",
-      "target = 1, i = 0, num = 5-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 2, target = -4, path = [2, 5, 5]\n",
-      "-> target < 0\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 8, i = 1, num = 3-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 1, target = 5, path = [3]\n",
-      "candidates = [3, 5]\n",
-      "target = 5, i = 0, num = 3-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 1, target = 2, path = [3, 3]\n",
-      "candidates = [3, 5]\n",
-      "target = 2, i = 0, num = 3-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 1, target = -1, path = [3, 3, 3]\n",
-      "-> target < 0\n",
-      "candidates = [3, 5]\n",
-      "target = 5, i = 1, num = 5-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 2, target = 0, path = [3, 5]\n",
-      "-> res = [[2, 2, 2, 2], [2, 3, 3], [3, 5]]\n",
-      "candidates = [2, 3, 5]\n",
-      "target = 8, i = 2, num = 5-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 2, target = 3, path = [5]\n",
-      "candidates = [5]\n",
-      "target = 3, i = 0, num = 5-> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 2, target = -2, path = [5, 5]\n",
-      "-> target < 0\n"
+      "candidates = [2, 3, 6, 7]\n",
+      "\n",
+      "index = 0, j = 0, current_list = [], previous_total = 0, current_total = 2\n",
+      "current_list = [2]\n",
+      "index = 0, j = 0, current_list = [2], previous_total = 2, current_total = 4\n",
+      "current_list = [2, 2]\n",
+      "index = 0, j = 0, current_list = [2, 2], previous_total = 4, current_total = 6\n",
+      "current_list = [2, 2, 2]\n",
+      "index = 0, j = 0, current_list = [2, 2, 2], previous_total = 6, current_total = 8\n",
+      "(current_total = 8) > (target = 7)\n",
+      "pop -> index = 0, j = 0, current_list = [2, 2], previous_total = 4\n",
+      "\n",
+      "index = 0, j = 1, current_list = [2, 2], previous_total = 4, current_total = 7\n",
+      "current_list = [2, 2, 3]\n",
+      "(previous_total = 7) == (target = 7)\n",
+      "result = [[2, 2, 3]]\n",
+      "pop -> index = 0, j = 1, current_list = [2, 2], previous_total = 4\n",
+      "\n",
+      "index = 0, j = 2, current_list = [2, 2], previous_total = 4, current_total = 10\n",
+      "(current_total = 10) > (target = 7)\n",
+      "pop -> index = 0, j = 0, current_list = [2], previous_total = 2\n",
+      "\n",
+      "index = 0, j = 1, current_list = [2], previous_total = 2, current_total = 5\n",
+      "current_list = [2, 3]\n",
+      "index = 1, j = 1, current_list = [2, 3], previous_total = 5, current_total = 8\n",
+      "(current_total = 8) > (target = 7)\n",
+      "pop -> index = 0, j = 1, current_list = [2], previous_total = 2\n",
+      "\n",
+      "index = 0, j = 2, current_list = [2], previous_total = 2, current_total = 8\n",
+      "(current_total = 8) > (target = 7)\n",
+      "pop -> index = 0, j = 0, current_list = [], previous_total = 0\n",
+      "\n",
+      "index = 0, j = 1, current_list = [], previous_total = 0, current_total = 3\n",
+      "current_list = [3]\n",
+      "index = 1, j = 1, current_list = [3], previous_total = 3, current_total = 6\n",
+      "current_list = [3, 3]\n",
+      "index = 1, j = 1, current_list = [3, 3], previous_total = 6, current_total = 9\n",
+      "(current_total = 9) > (target = 7)\n",
+      "pop -> index = 1, j = 1, current_list = [3], previous_total = 3\n",
+      "\n",
+      "index = 1, j = 2, current_list = [3], previous_total = 3, current_total = 9\n",
+      "(current_total = 9) > (target = 7)\n",
+      "pop -> index = 0, j = 1, current_list = [], previous_total = 0\n",
+      "\n",
+      "index = 0, j = 2, current_list = [], previous_total = 0, current_total = 6\n",
+      "current_list = [6]\n",
+      "index = 2, j = 2, current_list = [6], previous_total = 6, current_total = 12\n",
+      "(current_total = 12) > (target = 7)\n",
+      "pop -> index = 0, j = 2, current_list = [], previous_total = 0\n",
+      "\n",
+      "index = 0, j = 3, current_list = [], previous_total = 0, current_total = 7\n",
+      "current_list = [7]\n",
+      "(previous_total = 7) == (target = 7)\n",
+      "result = [[2, 2, 3], [7]]\n",
+      "pop -> index = 0, j = 3, current_list = [], previous_total = 0\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[[2, 2, 2, 2], [2, 3, 3], [3, 5]]"
+       "[[2, 2, 3], [7]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "candidates = [2,3,6,7]; target = 7\n",
+    "# Output: [[2,2,3],[7]]\n",
+    "\n",
     "Solution().combinationSum(candidates, target)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
