--- a/208. Implement Trie (Prefix Tree).ipynb
+++ b/208. Implement Trie (Prefix Tree).ipynb
@@ -23,52 +23,57 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3b4fdcf6",
+   "id": "8c61ab33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TreeNode():\n",
+    "# 定義 Trie 的節點結構\n",
+    "class TrieNode():\n",
     "    def __init__(self):\n",
-    "        self.children = {}\n",
-    "        self.end_of_word = False\n",
+    "        self.children = {}  # 使用字典儲存每個字元對應的子節點\n",
+    "        self.end = False    # 標記是否為一個單詞的結尾\n",
     "\n",
+    "# 定義 Trie 主結構\n",
     "class Trie:\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.root = TreeNode()\n",
+    "        self.root = TrieNode()  # 建立根節點\n",
     "\n",
+    "    # 插入一個單詞到 Trie 中\n",
     "    def insert(self, word: str) -> None:\n",
-    "        current = self.root\n",
-    "        for char in word:\n",
+    "        current = self.root  # 從根節點開始\n",
+    "        for char in word:    # 逐字元處理單詞\n",
     "            if char not in current.children:\n",
-    "                current.children[char] = TreeNode()\n",
-    "            current = current.children[char]\n",
-    "        \n",
-    "        current.end_of_word = True\n",
+    "                current.children[char] = TrieNode()  # 若無此字元節點，則創建新節點\n",
+    "            current = current.children[char]  # 移動到下一個節點\n",
     "\n",
+    "        current.end = True  # 單詞插入完成，標記結尾\n",
+    "\n",
+    "    # 搜尋 Trie 中是否包含完整單詞\n",
     "    def search(self, word: str) -> bool:\n",
-    "        current = self.root\n",
-    "        for char in word:\n",
+    "        current = self.root  # 從根節點開始\n",
+    "        for char in word:    # 逐字元查找\n",
     "            if char not in current.children:\n",
-    "                return False\n",
-    "            current = current.children[char]\n",
-    "            \n",
-    "        return current.end_of_word\n",
+    "                return False  # 若遇到不存在的字元，則單詞不存在\n",
+    "            current = current.children[char]  # 移動到下一個節點\n",
     "\n",
+    "        return current.end  # 回傳是否為完整單詞的結尾\n",
+    "\n",
+    "    # 判斷是否存在某個字首\n",
     "    def startsWith(self, prefix: str) -> bool:\n",
-    "        current = self.root\n",
-    "        for char in prefix:\n",
+    "        current = self.root  # 從根節點開始\n",
+    "        for char in prefix:  # 逐字元查找\n",
     "            if char not in current.children:\n",
-    "                return False\n",
-    "            current = current.children[char]\n",
+    "                return False  # 若遇到不存在的字元，則字首不存在\n",
+    "            current = current.children[char]  # 移動到下一個節點\n",
     "\n",
-    "        return True"
+    "        return True  # 所有字元都存在，代表有此字首"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "07e91e72",
+   "id": "2fed1bb1",
    "metadata": {},
    "outputs": [
     {
