--- a/79. Word Search.ipynb
+++ b/79. Word Search.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7c8730cc",
    "metadata": {},
    "outputs": [],
@@ -52,13 +52,16 @@
     "            \n",
     "            board[row][col] = '#'\n",
     "            \n",
-    "            for row_delta, col_delta in direction: # time:o(4)\n",
-    "                if dfs(row=row+row_delta, col = col+col_delta, index=index+1): # time:O(L)\n",
-    "                    return True\n",
+    "            result = (\n",
+    "                dfs(row=row-1, col = col, index=index+1) or\n",
+    "                dfs(row=row+1, col = col, index=index+1) or\n",
+    "                dfs(row=row, col = col-1, index=index+1) or\n",
+    "                dfs(row=row, col = col+1, index=index+1) # time:O(L)\n",
+    "                ) # time:o(4)\n",
     "                \n",
     "            board[row][col] = word[index]\n",
     "            \n",
-    "            return False\n",
+    "            return result\n",
     "\n",
     "\n",
     "        for row in range(row_length): # time:O(r)\n",
