--- a/79. Word Search.ipynb
+++ b/79. Word Search.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7c8730cc",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,6 @@
     "        row_length = len(board)\n",
     "        col_length = len(board[0])\n",
     "        word_length = len(word)\n",
-    "        direction = [(1, 0), (-1, 0), (0, -1), (0, 1)] # 上下左右\n",
     "\n",
     "        def dfs(row, col, index): # time:O(4^L)\n",
     "            if word_length == index:\n",
@@ -57,7 +56,7 @@
     "                dfs(row=row+1, col = col, index=index+1) or\n",
     "                dfs(row=row, col = col-1, index=index+1) or\n",
     "                dfs(row=row, col = col+1, index=index+1) # time:O(L)\n",
-    "                ) # time:o(4)\n",
+    "                ) # 上下左右 # time:o(4)\n",
     "                \n",
     "            board[row][col] = word[index]\n",
     "            \n",
