--- a/212. Word Search II.ipynb
+++ b/212. Word Search II.ipynb
@@ -8,70 +8,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$r$ is the number of rows.  \n",
+    "$c$ is the number of columns.  \n",
+    "$t$ is the maximum length of any word in the array words.  \n",
+    "$s$ is the sum of the lengths of all the words. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Backtracking (Trie + Hash Set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(r * c * 4 * 3^{t-1} + s)$**  \n",
+    "**空間複雜度: $O(s)$**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
+    "class TrieNode():\n",
+    "    def __init__(self):\n",
+    "        self.children = {}\n",
+    "        self.end = False\n",
+    "    def add_word(self, word):\n",
+    "        current = self\n",
+    "        for char in word: # time: O(t)\n",
+    "            if char not in current.children:\n",
+    "                current.children[char] = TrieNode()\n",
+    "            current = current.children[char]\n",
+    "\n",
+    "        current.end = True\n",
+    "\n",
     "class Solution:\n",
-    "    def findWords(self, board, words):\n",
-    "        self.board = board\n",
-    "                \n",
-    "        # 建立字典樹資料結構，將單詞列表轉換成字典樹\n",
-    "        trie = {}\n",
-    "        for word in words:\n",
-    "            current = trie # setdefault會返回該鍵對應的值，所以需要先把trie指定給current，避免改到trie\n",
-    "            for letter in word:\n",
-    "                current = current.setdefault(letter, {}) # 如果有指定的letter，則返回該key對應的value；如果沒有，將該letter插入字典，並返回對應的默認值。最後將值指定給current。\n",
-    "            current['#'] = word  # 在結尾處標記單詞結束\n",
-    "        print(f\"trie = {trie}\")\n",
-    "        \n",
-    "        self.row, self.col = len(board), len(board[0]) # 取得棋盤的維度\n",
-    "        self.res = [] # 初始化一個列表來存儲結果\n",
-    "        \n",
-    "        # 遍歷棋盤並搜尋單詞\n",
-    "        for r in range(self.row):\n",
-    "            for c in range(self.col):\n",
-    "                # 檢查當前字母是否在字典樹中\n",
-    "                if board[r][c] in trie:\n",
-    "                    print(\"_\" * 150)\n",
-    "                    print(f\"trie.keys = {trie.keys()}\")\n",
-    "                    self.dfs(row = r, col = c, root = trie)\n",
-    "        \n",
-    "        return self.res # 返回結果列表\n",
-    "    \n",
-    "    \n",
-    "    # dfs用於遍歷棋盤並搜尋單詞\n",
-    "    def dfs(self, row, col, root):\n",
-    "        print(\"-\" * 150)      \n",
-    "        letter = self.board[row][col] # 獲取棋盤當前位置的字母\n",
-    "        current = root[letter] # 遍歷字典樹到達下一個節點\n",
-    "        print(f\"row = {row}, col = {col}\")\n",
-    "        print(f\"letter = {letter}\")\n",
-    "        print(f\"current = {current}\")\n",
-    "        word = current.pop('#', False) # 檢查節點是否包含單詞 (刪除該key，並返回對應的value。如果key不存在，返回False，否則會出錯)\n",
-    "        print(f\"word = {word}\")\n",
+    "    def findWords(self, board: List[List[str]], words: List[str]) -> List[str]:\n",
+    "        root = TrieNode()\n",
+    "        for word in words: # time: O(s)，最深為單詞長度 t，但相較於總節點數 s 通常可忽略\n",
+    "            root.add_word(word)\n",
     "\n",
-    "        if word: # 如果找到單詞，將其添加到結果列表中\n",
-    "            print(f\"current(pop) = {current}\")\n",
-    "            self.res.append(word)\n",
-    "        \n",
-    "        self.board[row][col] = '*' # 標記棋盤上當前位置為已訪問\n",
+    "        row_length = len(board)\n",
+    "        col_length = len(board[0])\n",
+    "            \n",
+    "        result = set()\n",
+    "        visit = set()\n",
     "\n",
-    "        # 遞歸地在四個方向搜索, 上下左右\n",
-    "        for dr, dc in [(1, 0), (-1, 0), (0, 1), (0, -1)]:\n",
-    "            new_r, new_c = (row + dr), (col + dc)\n",
+    "        def dfs(row, col, node, word):\n",
+    "            if (\n",
+    "                row < 0 or col < 0 or\n",
+    "                row >= row_length or col >= col_length or\n",
+    "                (row, col) in visit or\n",
+    "                board[row][col] not in node.children\n",
+    "            ):\n",
+    "                return\n",
+    "            \n",
+    "            visit.add((row, col))\n",
+    "            node = node.children[board[row][col]]\n",
+    "            word += board[row][col]\n",
+    "            if node.end:\n",
+    "                result.add(word)\n",
     "\n",
-    "            # 檢查下一個位置是否在棋盤範圍內，並且下一個字母在字典樹中\n",
-    "            if ((0 <= new_r < self.row) and (0 <= new_c < self.col)) and (self.board[new_r][new_c] in current):\n",
-    "                self.dfs(row = new_r, col = new_c, root = current)\n",
+    "            # time: O(4)，第一次可以走上下左右 4 個方向\n",
+    "            # time: O(3^(t-1))，後續不能回到前一次的位置，只有三個方向\n",
+    "            dfs(row-1, col, node, word)\n",
+    "            dfs(row+1, col, node, word)\n",
+    "            dfs(row, col-1, node, word)\n",
+    "            dfs(row, col+1, node, word)\n",
     "\n",
-    "        self.board[row][col] = letter # 恢復棋盤上當前位置的原始值\n",
-    "        \n",
-    "        if not current:  # 如果當前節點沒有子節點，從字典樹中刪除\n",
-    "            print(f\"root = {root}\")\n",
-    "            root.pop(letter)\n",
-    "            # print(f\"root = {root}\")"
+    "            visit.remove((row, col))\n",
+    "\n",
+    "        for row in range(row_length): # time: O(r)\n",
+    "            for col in range(col_length): # time: O(c)\n",
+    "                dfs(row, col, root, '')\n",
+    "\n",
+    "        return list(result)"
    ]
   },
   {
@@ -80,91 +102,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "trie = {'o': {'a': {'t': {'h': {'#': 'oath', 'k': {'r': {'#': 'oathkr'}}}}}}, 'p': {'e': {'a': {'#': 'pea'}}}, 'e': {'a': {'t': {'#': 'eat'}}}, 'r': {'a': {'i': {'n': {'#': 'rain'}}}}}\n",
-      "______________________________________________________________________________________________________________________________________________________\n",
-      "trie.keys = dict_keys(['o', 'p', 'e', 'r'])\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 0, col = 0\n",
-      "letter = o\n",
-      "current = {'a': {'t': {'h': {'#': 'oath', 'k': {'r': {'#': 'oathkr'}}}}}}\n",
-      "word = False\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 0, col = 1\n",
-      "letter = a\n",
-      "current = {'t': {'h': {'#': 'oath', 'k': {'r': {'#': 'oathkr'}}}}}\n",
-      "word = False\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 1, col = 1\n",
-      "letter = t\n",
-      "current = {'h': {'#': 'oath', 'k': {'r': {'#': 'oathkr'}}}}\n",
-      "word = False\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 2, col = 1\n",
-      "letter = h\n",
-      "current = {'#': 'oath', 'k': {'r': {'#': 'oathkr'}}}\n",
-      "word = oath\n",
-      "current(pop) = {'k': {'r': {'#': 'oathkr'}}}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 2, col = 2\n",
-      "letter = k\n",
-      "current = {'r': {'#': 'oathkr'}}\n",
-      "word = False\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 2, col = 3\n",
-      "letter = r\n",
-      "current = {'#': 'oathkr'}\n",
-      "word = oathkr\n",
-      "current(pop) = {}\n",
-      "root = {'r': {}}\n",
-      "root = {'k': {}}\n",
-      "root = {'h': {}}\n",
-      "root = {'t': {}}\n",
-      "root = {'a': {}}\n",
-      "root = {'o': {}, 'p': {'e': {'a': {'#': 'pea'}}}, 'e': {'a': {'t': {'#': 'eat'}}}, 'r': {'a': {'i': {'n': {'#': 'rain'}}}}}\n",
-      "______________________________________________________________________________________________________________________________________________________\n",
-      "trie.keys = dict_keys(['p', 'e', 'r'])\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 1, col = 0\n",
-      "letter = e\n",
-      "current = {'a': {'t': {'#': 'eat'}}}\n",
-      "word = False\n",
-      "______________________________________________________________________________________________________________________________________________________\n",
-      "trie.keys = dict_keys(['p', 'e', 'r'])\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 1, col = 3\n",
-      "letter = e\n",
-      "current = {'a': {'t': {'#': 'eat'}}}\n",
-      "word = False\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 1, col = 2\n",
-      "letter = a\n",
-      "current = {'t': {'#': 'eat'}}\n",
-      "word = False\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 1, col = 1\n",
-      "letter = t\n",
-      "current = {'#': 'eat'}\n",
-      "word = eat\n",
-      "current(pop) = {}\n",
-      "root = {'t': {}}\n",
-      "root = {'a': {}}\n",
-      "root = {'p': {'e': {'a': {'#': 'pea'}}}, 'e': {}, 'r': {'a': {'i': {'n': {'#': 'rain'}}}}}\n",
-      "______________________________________________________________________________________________________________________________________________________\n",
-      "trie.keys = dict_keys(['p', 'r'])\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "row = 2, col = 3\n",
-      "letter = r\n",
-      "current = {'a': {'i': {'n': {'#': 'rain'}}}}\n",
-      "word = False\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['oath', 'oathkr', 'eat']"
+       "['oa', 'oaa']"
       ]
      },
      "execution_count": 2,
@@ -173,19 +113,122 @@
     }
    ],
    "source": [
-    "board = [\n",
-    "    [\"o\",\"a\",\"a\",\"n\"],\n",
-    "    [\"e\",\"t\",\"a\",\"e\"],\n",
-    "    [\"i\",\"h\",\"k\",\"r\"],\n",
-    "    [\"i\",\"f\",\"l\",\"v\"]]\n",
-    "words = [\"oath\",\"pea\",\"eat\",\"rain\",\"oathkr\"]\n",
+    "board = [[\"o\",\"a\",\"b\",\"n\"],[\"o\",\"t\",\"a\",\"e\"],[\"a\",\"h\",\"k\",\"r\"],[\"a\",\"f\",\"l\",\"v\"]]\n",
+    "words = [\"oa\",\"oaa\"]\n",
+    "# Output: [\"eat\",\"oath\"]\n",
+    "\n",
+    "Solution().findWords(board, words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Backtracking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(r * c * 4^t + s) = O(r * c * 4^t)$**  \n",
+    "**空間複雜度: $O(t)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def findWords(self, board: List[List[str]], words: List[str]) -> List[str]:\n",
+    "        # 取得棋盤的行數與列數\n",
+    "        row_length = len(board)\n",
+    "        col_length = len(board[0])\n",
+    "        # 儲存最終找到的單詞\n",
+    "        result_list = []\n",
+    "\n",
+    "        # 定義 DFS 函式，用來檢查從 (row, col) 開始能否找到 word[index:]\n",
+    "        def dfs(word, index, row, col):\n",
+    "            # 如果已經走到單詞的最後一個字母之後，代表整個單詞找到\n",
+    "            if index == len(word):\n",
+    "                return True\n",
+    "            \n",
+    "            # 邊界檢查 & 是否匹配字母 & 是否已訪問過\n",
+    "            if (\n",
+    "                row < 0 or col < 0 or\n",
+    "                row >= row_length or col >= col_length or\n",
+    "                word[index] != board[row][col] or\n",
+    "                board[row][col] == '#'\n",
+    "            ):\n",
+    "                return False\n",
+    "            \n",
+    "            # 暫時標記為已訪問\n",
+    "            board[row][col] = '#'\n",
+    "\n",
+    "            # 往上下左右四個方向繼續搜尋下一個字母 # time: O(4^t)\n",
+    "            result_flag = (\n",
+    "                dfs(word, index+1, row-1, col) or\n",
+    "                dfs(word, index+1, row+1, col) or\n",
+    "                dfs(word, index+1, row, col-1) or\n",
+    "                dfs(word, index+1, row, col+1)\n",
+    "            )\n",
+    "\n",
+    "            # 回溯：恢復原本的字母，讓其他搜尋路徑可以使用\n",
+    "            board[row][col] = word[index]\n",
+    "\n",
+    "            return result_flag\n",
+    "\n",
+    "        # 針對每個單詞進行搜尋\n",
+    "        for word in words: #time: O(s)，+s 是在遍歷 words 陣列、讀取字元的過程中累積的總成本，不是 DFS 的搜尋成本\n",
+    "            flag = False  # 紀錄該單詞是否已經找到\n",
+    "            for row in range(row_length): # time: O(r)，以下才是 DFS 的成本\n",
+    "                if flag:  # 如果已經找到，提前跳出\n",
+    "                    break\n",
+    "                for col in range(col_length): # time: O(c)\n",
+    "                    # 如果首字母不符合，直接跳過\n",
+    "                    if board[row][col] != word[0]:\n",
+    "                        continue\n",
+    "                    # 如果能找到該單詞，加入結果\n",
+    "                    if dfs(word, 0, row, col):\n",
+    "                        result_list.append(word)\n",
+    "                        flag = True\n",
+    "                        break\n",
+    "\n",
+    "        return result_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['oath', 'eat']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "board = [[\"o\",\"a\",\"a\",\"n\"],[\"e\",\"t\",\"a\",\"e\"],[\"i\",\"h\",\"k\",\"r\"],[\"i\",\"f\",\"l\",\"v\"]]\n",
+    "words = [\"oath\",\"pea\",\"eat\",\"rain\"]\n",
+    "# Output: [\"eat\",\"oath\"]\n",
+    "\n",
     "Solution().findWords(board, words)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
